# seedclass_os

./: .gitignore  CMakeLists.txt  common.c  common.h  multisum_process.c  multisum_thread.c
process/: Makefile  input.txt  multisum_process.c
thread/: Makefile  multisum_thread.c
